--- a/env.sample
+++ b/env.sample
@@ -103,7 +103,7 @@ PHP80_VERSION=8.0.30
 PHP80_PHP_CONF_FILE=./services/php80/php.ini
 PHP80_FPM_CONF_FILE=./services/php80/php-fpm.conf
 PHP80_LOG_DIR=./logs/php80
-PHP80_EXTENSIONS=pdo_mysql,mysqli,mbstring,gd,curl,opcache
+PHP80_EXTENSIONS=pdo_mysql,zip,pcntl,mysqli,mbstring,exif,bcmath,calendar,sockets,gettext,shmop,sysvmsg,sysvsem,sysvshm,pdo_rebird,pdo_dblib,pdo_oci,pdo_odbc,pdo_pgsql,pgsql,oci8,odbc,dba,gd,intl,bz2,soap,xsl,xmlrpc,wddx,curl,readline,snmp,pspell,recode,tidy,gmp,imap,ldap,imagick,sqlsrv,mcrypt,opcache,redis,memcached,swoole,pdo_sqlsrv,sodium,yaf,mysql,amqp,mongodb,event,rar,ast,yac,yar,yaconf,msgpack,igbinary,seaslog,varnish,xhprof,xlswriter,memcache,rdkafka,zookeeper,psr,phalcon,sdebug,ssh2,yaml,protobuf,hprose
 
 
 #
