--- a/docker-compose.sample.yml
+++ b/docker-compose.sample.yml
@@ -19,51 +19,51 @@ services:
     networks:
       - default
 
-  php82:
-    build:
-      context: ./services/php82
-      args:
-        DEBIAN_MIRROR_DOMAIN: deb.debian.org
-        PHP_EXTENSIONS: pdo_mysql mysqli gd curl opcache
-        TZ: "$TZ"
-    container_name: php82
-    expose:
-      - 9501
-    volumes:
-      - ./www:/www
-      - ./services/php82/php.ini:/usr/local/etc/php/php.ini
-      - ./services/php82/php-fpm.conf:/usr/local/etc/php-fpm.d/www.conf
-      - ./logs/php82:/var/log/php
-      - ./data/composer:/tmp/composer
-    restart: always
-    cap_add:
-      - SYS_PTRACE
-    networks:
-      - default
-
-#  php80:
+#  php82:
 #    build:
-#      context: ./services/php80
+#      context: ./services/php82
 #      args:
-#        PHP_VERSION: php:${PHP80_VERSION}-fpm-alpine
-#        CONTAINER_PACKAGE_URL: ${CONTAINER_PACKAGE_URL}
-#        COMPOSER_URL: ${COMPOSER_URL}
-#        PHP_EXTENSIONS: ${PHP80_EXTENSIONS}
+#        DEBIAN_MIRROR_DOMAIN: deb.debian.org
+#        PHP_EXTENSIONS: pdo_mysql mysqli gd curl opcache
 #        TZ: "$TZ"
-#    container_name: php80
+#    container_name: php82
 #    expose:
 #      - 9501
 #    volumes:
-#      - ${SOURCE_DIR}:/www/:rw
-#      - ${PHP80_PHP_CONF_FILE}:/usr/local/etc/php/php.ini:ro
-#      - ${PHP80_FPM_CONF_FILE}:/usr/local/etc/php-fpm.d/www.conf:rw
-#      - ${PHP80_LOG_DIR}:/var/log/php
-#      - ${DATA_DIR}/composer:/tmp/composer
+#      - ./www:/www
+#      - ./services/php82/php.ini:/usr/local/etc/php/php.ini
+#      - ./services/php82/php-fpm.conf:/usr/local/etc/php-fpm.d/www.conf
+#      - ./logs/php82:/var/log/php
+#      - ./data/composer:/tmp/composer
 #    restart: always
 #    cap_add:
 #      - SYS_PTRACE
 #    networks:
 #      - default
+
+  php80:
+    build:
+      context: ./services/php80
+      args:
+        PHP_VERSION: php:${PHP80_VERSION}-fpm-alpine
+        CONTAINER_PACKAGE_URL: ${CONTAINER_PACKAGE_URL}
+        COMPOSER_URL: ${COMPOSER_URL}
+        PHP_EXTENSIONS: ${PHP80_EXTENSIONS}
+        TZ: "$TZ"
+    container_name: php80
+    expose:
+      - 9501
+    volumes:
+      - ${SOURCE_DIR}:/www/:rw
+      - ${PHP80_PHP_CONF_FILE}:/usr/local/etc/php/php.ini:ro
+      - ${PHP80_FPM_CONF_FILE}:/usr/local/etc/php-fpm.d/www.conf:rw
+      - ${PHP80_LOG_DIR}:/var/log/php
+      - ${DATA_DIR}/composer:/tmp/composer
+    restart: always
+    cap_add:
+      - SYS_PTRACE
+    networks:
+      - default
 
 #  php74:
 #     build:
