--- a/docker-compose.sample.yml
+++ b/docker-compose.sample.yml
@@ -3,6 +3,10 @@ services:
   nginx:
     build:
       context: ./services/nginx
+      args:
+        NGINX_VERSION: nginx:${NGINX_VERSION}
+        CONTAINER_PACKAGE_URL: ${CONTAINER_PACKAGE_URL}
+        NGINX_INSTALL_APPS: ${NGINX_INSTALL_APPS}
     container_name: nginx
     ports:
       - "80:80"
