--- a/services/nginx/Dockerfile
+++ b/services/nginx/Dockerfile
@@ -6,9 +6,12 @@ ARG NGINX_VERSION
 ARG CONTAINER_PACKAGE_URL
 ARG NGINX_INSTALL_APPS
 ENV INSTALL_APPS=",${NGINX_INSTALL_APPS},"
+
+
 RUN if [ "${CONTAINER_PACKAGE_URL}" != "" ]; then \
         sed -i "s/dl-cdn.alpinelinux.org/${CONTAINER_PACKAGE_URL}/g" /etc/apk/repositories; \
-    fi
+    fi \
+RUN echo "---------- 开始 安装 certbot----------";
 RUN if [ -z "${INSTALL_APPS##*,certbot,*}" ]; then \
         echo "---------- Install certbot ----------"; \
         apk add --no-cache certbot; \
