--- a/services/nginx/Dockerfile
+++ b/services/nginx/Dockerfile
@@ -11,7 +11,7 @@ ENV INSTALL_APPS=",${NGINX_INSTALL_APPS},"
 RUN if [ "${CONTAINER_PACKAGE_URL}" != "" ]; then \
         sed -i "s/dl-cdn.alpinelinux.org/${CONTAINER_PACKAGE_URL}/g" /etc/apk/repositories; \
     fi \
-RUN echo "---------- 开始 安装 certbot----------";
+RUN echo "---------- 开始 安装 certbot----------"; \
 RUN if [ -z "${INSTALL_APPS##*,certbot,*}" ]; then \
         echo "---------- Install certbot ----------"; \
         apk add --no-cache certbot; \
